initialize making test example in readme

--- a/AudioManager/audio.cfg
+++ b/AudioManager/audio.cfg
@@ -1,8 +1,12 @@
 [Tracks]
+;castle_intro = [110, 48, "res://audio/bgm/castle_intro.mp3"]
+;castle_loop = [110, 72, "res://audio/bgm/castle_loop.mp3"]
 
 [Actions]
+;play_castle = {"play":{"castle_intro":{"on_end":"next", "next_song":"castle_loop"}}}
 
 [State Variables]
+;current_location = ["/root/globals","get_location"]
 
 [Trees]
-
+;root = {"current_location" : {"overworld" : "play_overworld", "item_shop" : "play_item_shop", "castle" : "play_castle"}
