Fix any call_func() calls to call()

--- a/magic-cassette-godot-test/.godot/editor/editor_layout.cfg
+++ b/magic-cassette-godot-test/.godot/editor/editor_layout.cfg
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/audio/AudioManager/audio_logic_tree_handler.gd", "res://scenes/audio/AudioManager/audio_manager_config.gd", "res://scenes/globals.gd", "res://scenes/audio/AudioManager/song_controller.gd", "res://scenes/audio/AudioManager/song_handler.gd"]
-selected_script="res://scenes/globals.gd"
+open_scripts=["res://scenes/audio/AudioManager/audio.ini", "res://scenes/audio/AudioManager/audio_logic_tree_handler.gd", "res://scenes/audio/AudioManager/audio_manager.gd", "res://scenes/audio/AudioManager/audio_manager_config.gd", "res://scenes/audio/AudioManager/callbacks.gd", "res://scenes/globals.gd", "res://scenes/audio/AudioManager/song.gd", "res://scenes/audio/AudioManager/song_controller.gd", "res://scenes/audio/AudioManager/song_handler.gd"]
+selected_script="res://scenes/audio/AudioManager/audio.ini"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
