--- a/magic-cassette-godot-test/.godot/editor/editor_layout.cfg
+++ b/magic-cassette-godot-test/.godot/editor/editor_layout.cfg
@@ -19,20 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/audio/AudioManager/audio.ini")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/audio/AudioManager/audio_manager_config.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/audio/", "res://scenes/audio/AudioManager/", "res://audio/")
-dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/levels/castle.tscn")
-current_scene="res://scenes/levels/castle.tscn"
+open_scenes=PackedStringArray("res://scenes/levels/castle.tscn", "res://scenes/audio/AudioManager/audio_manager.tscn", "res://scenes/audio/AudioManager/audio_logic_tree_handler.tscn")
+current_scene="res://scenes/audio/AudioManager/audio_logic_tree_handler.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -40,8 +40,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/audio/AudioManager/audio.ini", "res://scenes/audio/AudioManager/audio_logic_tree_handler.gd", "res://scenes/audio/AudioManager/audio_manager.gd", "res://scenes/audio/AudioManager/audio_manager_config.gd", "res://scenes/audio/AudioManager/callbacks.gd", "res://scenes/globals.gd", "res://scenes/audio/AudioManager/song.gd", "res://scenes/audio/AudioManager/song_controller.gd", "res://scenes/audio/AudioManager/song_handler.gd"]
-selected_script="res://scenes/audio/AudioManager/audio.ini"
+open_scripts=["res://scenes/audio/AudioManager/audio_logic_tree_handler.gd", "res://scenes/audio/AudioManager/audio_manager.gd", "res://scenes/audio/AudioManager/audio_manager_config.gd", "res://scenes/audio/AudioManager/callbacks.gd", "res://scenes/globals.gd", "res://scenes/audio/AudioManager/song.gd", "res://scenes/audio/AudioManager/song_controller.gd", "res://scenes/audio/AudioManager/song_handler.gd"]
+selected_script="res://scenes/audio/AudioManager/audio_logic_tree_handler.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
